# distributed-training

./: .gitignore  Distriuted Noteook.ipynb  LICENSE  Notes.txt  README.md  Testing Noteook.ipynb  main.py  pyproject.toml  resrouces.md
FSDP2_LLM_Training/: README.md  launch_multi_node.sh  launch_slurm.sh  requirements.txt  train_llm.py
FSDP2_LLM_Training/examples/: finetune_llama2_7b.sh  finetune_llama3_8b.sh  finetune_mistral_7b.sh  train_from_scratch_7b.sh
Local/: DDP-FSDP-Noteook.ipynb  utils.py
Local/FSDP2_LLM_Training/: QUICKSTART.md  launch_single_node.sh
Local/fsdp/: FullyShardedDataParellel.py
Local/runs/Feb01_07-00-28_Lakis-PC/: events.out.tfevents.1769922028.Lakis-PC.34268.0
Local/runs/Feb01_07-00-50_Lakis-PC/: events.out.tfevents.1769922050.Lakis-PC.34268.1
data-parallel/: DataParallel ResNet-50.py  DataParallel.py
distributed-data-parallel/: DistributedDataParallel ResNet-50.py  DistributedDataParallel.py
distributed-data-parallel/ddp/: example.py  run_example.sh
fsdp/: FullyShardedDataParellel ResNet-50.py  FullyShardedDataParellel.py
