[project]
name = "ditributed-training"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
    "torch>=2.7.0",
    "torchrun>=0.2.9",
    "torchvision>=0.22.0",
    "transformers>=4.57.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
